--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="w-[40%] mx-auto  relative">
             <input type="text" class="w-full border rounded-md px-4 py-2 focus:outline-none"
                 placeholder="Enter text here...">
-            <i class="ri-search-line absolute right-3 top-2 cursor-pointer hover:text-green-800"></i>
+            <i class="ri-search-line absolute right-3 top-2 cursor-pointer"></i>
         </div>
 
         <div class="right-part flex items-center gap-3 w-[25%]">
@@ -57,7 +57,7 @@
                 <img src="./assets/images/language.png" alt="">
                 <p>English</p><i class="ri-arrow-drop-down-line"></i>
             </div>
-            <div class="login flex items-center cursor-pointer">
+            <div class="login flex items-center ">
                 <i class="ri-user-line"></i>
                 <p>login</p>
 
@@ -225,11 +225,11 @@
                         alt="Product Image">
                     <div class="ract absolute top-[110%] left-[30%] hover:transition duration-300 ease-in-out  ">
                         <i
-                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                     </div>
                 </div>
                 <p class="text-gray-500 text-center mt-2 font-bold">Fresh Meet</p>
@@ -241,11 +241,11 @@
                         alt="Product Image">
                     <div class="ract absolute top-[110%] left-[30%] hover:transition duration-300 ease-in-out  ">
                         <i
-                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                     </div>
                 </div>
                 <p class="text-gray-500 text-center mt-2 font-bold">Fresh Meet</p>
@@ -258,11 +258,11 @@
                         alt="Product Image">
                     <div class="ract absolute top-[110%] left-[30%] hover:transition duration-300 ease-in-out  ">
                         <i
-                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                     </div>
                 </div>
                 <p class="text-gray-500 text-center mt-2 font-bold">Fresh Meet</p>
@@ -276,11 +276,11 @@
                         alt="Product Image">
                     <div class="ract absolute top-[110%] left-[30%] hover:transition duration-300 ease-in-out  ">
                         <i
-                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                     </div>
                 </div>
                 <p class="text-gray-500 text-center mt-2 font-bold">Fresh Meet</p>
@@ -294,11 +294,11 @@
                         alt="Product Image">
                     <div class="ract absolute top-[110%] left-[30%] hover:transition duration-300 ease-in-out  ">
                         <i
-                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                     </div>
                 </div>
                 <p class="text-gray-500 text-center mt-2 font-bold">Fresh Meet</p>
@@ -311,11 +311,11 @@
                         alt="Product Image">
                     <div class="ract absolute top-[110%] left-[30%] hover:transition duration-300 ease-in-out  ">
                         <i
-                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                     </div>
                 </div>
                 <p class="text-gray-500 text-center mt-2 font-bold">Fresh Meet</p>
@@ -328,11 +328,11 @@
                         alt="Product Image">
                     <div class="ract absolute top-[110%] left-[30%] hover:transition duration-300 ease-in-out  ">
                         <i
-                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                     </div>
                 </div>
                 <p class="text-gray-500 text-center mt-2 font-bold">Fresh Meet</p>
@@ -345,11 +345,11 @@
                         alt="Product Image">
                     <div class="ract absolute top-[110%] left-[30%] hover:transition duration-300 ease-in-out  ">
                         <i
-                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-heart-line bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shopping-cart-line bg-white  p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                         <i
-                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39] hover:text-white hover:rotate-36  transition duration-300 ease-in-out"></i>
+                            class="ri-shining-2-line p-2 rounded-full cursor-pointer bg-white p-2 rounded-full cursor-pointer hover:bg-[#7fad39]hover:text-emerald-600 hover:rotate-36  transition duration-300 ease-in-out"></i>
                     </div>
                 </div>
                 <p class="text-gray-500 text-center mt-2 font-bold">Fresh Meet</p>
@@ -375,6 +375,68 @@
         </div>
 
     </div>
+    <footer class="footer bg-[#F3F6FA] text-black py-8">
+        <div class="container mx-auto px-4">
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+                <div class="footer__about">
+                    <div class="footer__about__logo">
+                        <a href="./index.html"><img class="w-32" src="img/logo.png" alt=""></a>
+                    </div>
+                    <ul class="mt-4 text-gray-950">
+                        <li>Address: Kadihat , Belbari, Gangarampur</li>
+                        <li>Phone: +919546644618</li>
+                        <li>Email: mystor098@gmail.com</li>
+                    </ul>
+                </div>
+                <div class="footer__widget">
+                    <h6 class="text-gray-900 font-bold">Useful Links</h6>
+                    <ul class="mt-4">
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">About Us</a></li>
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">About Our Shop</a></li>
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">Secure Shopping</a></li>
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">Delivery information</a></li>
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">Privacy Policy</a></li>
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">Our Sitemap</a></li>
+                    </ul>
+                    <h6 class="mt-4 text-gray-900">Follow Us</h6>
+                    <ul class="mt-4">
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">Facebook</a></li>
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">Twitter</a></li>
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">LinkedIn</a></li>
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">Instagram</a></li>
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">Reddit</a></li>
+                        <li><a href="#" class="text-gray-950hover:text-emerald-600">Pinterest</a></li>
+                    </ul>
+                </div>
+                <div class="footer__widget">
+                    <h6 class="text-gray-900 font-bold">Join Our Newsletter Now</h6>
+                    <p class="mt-4 text-gray-950">Subscribe Now</p>
+                    <form class="mt-4">
+                        <input type="text" placeholder="Enter your mail"
+                            class="px-4 py-2 w-full rounded border border-gray-400">
+                        <button type="submit"
+                            class="mt-2 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Subscribe</button>
+                    </form>
+                    <div class="footer__widget__social mt-4">
+                        <a href="#" class="text-gray-950hover:text-emerald-600"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="text-gray-950hover:text-emerald-600"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-gray-950hover:text-emerald-600"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="text-gray-950hover:text-emerald-600"><i class="fab fa-pinterest"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-8 text-gray-950">
+                <p class="mb-4">&copy;
+
+                    made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                        target="_blank" class="hover:text-white">Joni Halder</a>
+
+                    <img src="./assets/images/payment-item.png" alt="">
+
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
