--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </div>
 
                     </div>
-                    <div class="login flex items-center cursor-pointer">
+                    <div class="flex items-center cursor-pointer" id="user">
                         <i class="ri-user-line"></i>
                         <p>login</p>
 
@@ -102,7 +102,7 @@
                     <a class="mx-[25px] hover:text-[green]" href="#">conact</a>
                 </nav>
                 <div
-                    class="bg-white p-8 rounded-lg shadow-lg w-96 absolute top-[17%] right-[7%] login-page z-[99] overflow-hidden">
+                    class="bg-white p-8 rounded-lg shadow-lg w-96 absolute top-[17%]  login-page z-[99] overflow-hidden">
                     <div id="loginForm" class="animate__animated animate__fadeInLeft">
                         <h2 class="text-2xl font-bold mb-4 text-center">Login</h2>
                         <form>
@@ -479,7 +479,7 @@
         <div class="product-section p-10 grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1   gap-3">
             <div class="max-w-xs">
                 <div class="flex items-center justify-between">
-                    <h1 class="p-3 text-2xl">Latest Products</h1>
+                    <h1 class="p-3 text-2xl font-bold">Latest Products</h1>
                     <i class="ri-arrow-left-s-line p-[8px]  bg-gray-300 rounded cursor-pointer text-xl"></i>
                     <i class="ri-arrow-right-s-line p-[8px] bg-gray-300 rounded cursor-pointer text-xl"></i>
 
@@ -621,7 +621,7 @@
             </div>
             <div class="max-w-xs">
                 <div class="flex items-center justify-between">
-                    <h1 class="p-3 text-2xl">Top Rated Products
+                    <h1 class="p-3 text-2xl font-bold">Top Rated Products
                     </h1>
                     <i class="ri-arrow-left-s-line p-[8px]  bg-gray-300 rounded cursor-pointer text-xl"></i>
                     <i class="ri-arrow-right-s-line p-[8px] bg-gray-300 rounded cursor-pointer text-xl"></i>
@@ -764,7 +764,7 @@
             </div>
             <div class="max-w-xs">
                 <div class="flex items-center justify-between">
-                    <h1 class="p-3 text-2xl">Review Products
+                    <h1 class="p-3 text-2xl font-bold">Review Products
                     </h1>
                     <i class="ri-arrow-left-s-line p-[8px]  bg-gray-300 rounded cursor-pointer text-xl"></i>
                     <i class="ri-arrow-right-s-line p-[8px] bg-gray-300 rounded cursor-pointer text-xl"></i>
@@ -908,12 +908,12 @@
         </div>
 
         <div class="blog-section p-10">
-            <h1 class="text-center text-3xl">From The Blog</h1>
+            <h1 class="text-center text-3xl font-bold">From The Blog</h1>
         </div>
 
         <footer class="footer bg-[#F3F6FA] text-black py-8">
             <div class="container mx-auto px-4">
-                <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+                <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
                     <div class="footer__about">
                         <div class="footer__about__logo">
                             <a href="./index.html"><img class="w-32" src="./assets/images/logo.png" alt=""></a>
@@ -934,7 +934,9 @@
                             <li><a href="#" class="text-gray-950hover:text-emerald-600">Privacy Policy</a></li>
                             <li><a href="#" class="text-gray-950hover:text-emerald-600">Our Sitemap</a></li>
                         </ul>
-                        <h6 class="mt-4 text-gray-900">Follow Us</h6>
+                    </div>
+                    <div class="fllow-us">
+                        <h6 class="font-bold text-gray-900">Follow Us</h6>
                         <ul class="mt-4">
                             <li><a href="#" class="text-gray-950hover:text-emerald-600">Facebook</a></li>
                             <li><a href="#" class="text-gray-950hover:text-emerald-600">Twitter</a></li>
