--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 </head>
 
 <body>
-    <div class="main w-full overflow-x-hidden">
-        <header class=" w-full   py-5 px-10 capitalize shadow-custom ">
+    <div class="main w-full overflow-hidden">
+        <header class=" w-full   py-5 px-10 capitalize shadow-custom">
             <div class="top-part flex items-center justify-between">
                 <div class="logo">
                     <img class="w-[50px]" src="./assets/images/logo.png" alt="">
@@ -89,12 +89,13 @@
                     <div class="flex items-center cursor-pointer" id="user">
                         <i class="ri-user-line"></i>
                         <p>login</p>
-
+                       
                     </div>
+                    <i class="ri-menu-3-fill cursor-pointer" id="hambuger-icon"></i>
                 </div>
             </div>
             <div class="bottom-part text-center relative">
-                <nav>
+                <nav class="w-[80%]">
                     <a class="mx-[25px] hover:text-[green]" href="#">home</a>
                     <a class="mx-[25px] hover:text-[green]" href="#">shop</a>
                     <a class="mx-[25px] hover:text-[green]" href="#">Productse</a>
@@ -471,17 +472,17 @@
                 <div class="max-w-[550px] h-64 bg-red-900" data-aos="zoom-in">
                     <img class="w-full h-full object-cover" src="./assets/images/banner/banner-2.jpg" alt="">
                 </div>
-
-
             </div>
-
         </div>
         <div class="product-section p-10 grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1   gap-3">
             <div class="max-w-xs">
                 <div class="flex items-center justify-between">
                     <h1 class="p-3 text-2xl font-bold">Latest Products</h1>
-                    <i class="ri-arrow-left-s-line p-[8px]  bg-gray-300 rounded cursor-pointer text-xl"></i>
-                    <i class="ri-arrow-right-s-line p-[8px] bg-gray-300 rounded cursor-pointer text-xl"></i>
+                    <button class="prev-btn p-[8px]  bg-gray-300 rounded cursor-pointer text-xl"> <i
+                            class="ri-arrow-left-s-line  "></i></button>
+                    <button class="next-btn p-[8px] bg-gray-300 rounded cursor-pointer text-xl ">
+                        <i class="ri-arrow-right-s-line   "></i>
+                    </button>
 
                 </div>
                 <div class="prdocut-silder">
@@ -623,8 +624,11 @@
                 <div class="flex items-center justify-between">
                     <h1 class="p-3 text-2xl font-bold">Top Rated Products
                     </h1>
-                    <i class="ri-arrow-left-s-line p-[8px]  bg-gray-300 rounded cursor-pointer text-xl"></i>
-                    <i class="ri-arrow-right-s-line p-[8px] bg-gray-300 rounded cursor-pointer text-xl"></i>
+                    <button class="prev-btn p-[8px]  bg-gray-300 rounded cursor-pointer text-xl"> <i
+                            class="ri-arrow-left-s-line  "></i></button>
+                    <button class="next-btn p-[8px] bg-gray-300 rounded cursor-pointer text-xl ">
+                        <i class="ri-arrow-right-s-line   "></i>
+                    </button>
 
                 </div>
                 <div class="prdocut-silder">
@@ -766,8 +770,11 @@
                 <div class="flex items-center justify-between">
                     <h1 class="p-3 text-2xl font-bold">Review Products
                     </h1>
-                    <i class="ri-arrow-left-s-line p-[8px]  bg-gray-300 rounded cursor-pointer text-xl"></i>
-                    <i class="ri-arrow-right-s-line p-[8px] bg-gray-300 rounded cursor-pointer text-xl"></i>
+                    <button class="prev-btn p-[8px]  bg-gray-300 rounded cursor-pointer text-xl"> <i
+                            class="ri-arrow-left-s-line  "></i></button>
+                    <button class="next-btn p-[8px] bg-gray-300 rounded cursor-pointer text-xl ">
+                        <i class="ri-arrow-right-s-line   "></i>
+                    </button>
 
                 </div>
                 <div class="prdocut-silder">
@@ -911,7 +918,7 @@
             <h1 class="text-center text-3xl font-bold">From The Blog</h1>
         </div>
 
-        <footer class="footer bg-[#F3F6FA] text-black py-8">
+        <footer class="footer bg-[#F3F6FA] text-black py-8 " data-aos="fade-up" data-aos-duration="1000">
             <div class="container mx-auto px-4">
                 <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
                     <div class="footer__about">
